<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".AlegeCont"
    android:background="@drawable/bc">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="60dp"
        android:text="@string/ce_doriti_sa_faceti"
        android:textColor="@color/darkDeepOrange"
        android:textColorHighlight="#000000"
        android:textSize="35sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30sp">
<Button
    android:id="@+id/btnStudent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/btnStudent"
    android:background="@android:color/holo_purple"
    android:layout_marginTop="100sp"
    android:layout_marginLeft="120dp"
    android:onClick="btnStudent"
    />

        <Button
            android:id="@+id/btnProfesor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="100sp"
            android:background="@color/darkDeepOrange"
            android:onClick="btnProfesor"
            android:text="@string/btnProfesor" />
    </LinearLayout>



</LinearLayout>
