<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".EditProfesor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="154dp"

            android:padding="20dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_imageView"
                android:layout_width="113dp"
                android:layout_height="122dp"
                android:layout_gravity="center"
                android:layout_marginTop="30sp"
                android:src="@drawable/user_icon"
                app:civ_border_color="#FFF"
                app:civ_border_width="2dp"
                app:layout_anchor="@+id/relativeLayout"
                app:layout_anchorGravity="top|center" />

            <TextView
                android:id="@+id/nume_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="20sp"
                android:layout_toRightOf="@+id/profile_imageView"
                android:includeFontPadding="false"
                android:text="Daniel Munteanu"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/username_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nume_field"
                android:layout_margin="10sp"
                android:layout_marginTop="10sp"
                android:layout_toRightOf="@+id/profile_imageView"
                android:includeFontPadding="false"
                android:text="username: munteanudanu"
                android:textSize="14sp" />

        </RelativeLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:background="#fff">
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/detalii_personale_txt"
                android:layout_width="wrap_content"
                android:layout_marginTop="5sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_toRightOf="@+id/profile_imageView"
                android:includeFontPadding="false"
                android:text="Detalii Personale"
                android:layout_marginLeft="10sp"
                android:textColor="#000"
                android:textSize="30sp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nume_profile"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nume">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/username_small_icon"
                    android:drawablePadding="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_profile"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="E-Mail">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/mail_small_icon"
                    android:drawablePadding="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/telefon_profile"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Numarul de telefon"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/phone_small_icon"
                    android:drawablePadding="10dp"
                    android:focusable="false"/>

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/adresa_txt"
                android:layout_width="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_toRightOf="@+id/profile_imageView"
                android:includeFontPadding="false"
                android:text="Adresa"
                android:layout_marginLeft="10sp"
                android:textColor="#000"
                android:textSize="30sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Judet:"
                android:layout_marginTop="15sp"
                android:textSize="18sp"
                android:transitionName="logo_desc" />

            <Spinner
                android:id="@+id/spinner_judet"
                android:spinnerMode = "dialog"
                android:color = "#ffffff"
                android:background="@drawable/spinner_background"
                android:layout_width="match_parent"
                android:layout_height="42dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/domiciliu_profile"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/domiciliu">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/varsta_profile"
                android:layout_width="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content"
                android:hint="Varsta">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/meterii_txt"
                android:layout_width="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_toRightOf="@+id/profile_imageView"
                android:includeFontPadding="false"
                android:text="Materii Preferate"
                android:layout_marginLeft="10sp"
                android:textColor="#000"
                android:textSize="30sp" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/categorii_profile"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/categorii">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:focusable="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/subcategorii_profile"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/subcategorii">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:focusable="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/materii_profile"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/materii">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:drawablePadding="10dp"
                    android:focusable="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/update_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@drawable/rounded_button"
                android:onClick="update"
                android:text="Salvează Modificari" />
            <Button
                android:id="@+id/editeazaMaterii_btn"
                android:onClick="editMaterii"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@drawable/rounded_button"
                android:text="Gestionează Materii" />
            <Button
                android:id="@+id/adauaImagine_btn"
                android:onClick="editMaterii"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_button"
                android:text="Adauga Poza" />
            <Button
                android:id="@+id/schimbaParola_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@drawable/rounded_button"
                android:onClick="update"
                android:text="Schimbă Parola" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>